added worker and rabbitmq implementation

--- a/dotNet5Starter.WebApp/dotNet5Starter.WebApp/appsettings.json
+++ b/dotNet5Starter.WebApp/dotNet5Starter.WebApp/appsettings.json
@@ -9,5 +9,44 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "RawRabbit": {
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "Port": 5672,
+    "Hostnames": [ "localhost" ],
+    "RequestTimeout": "00:00:10",
+    "PublishConfirmTimeout": "00:00:01",
+    "RecoveryInterval": "00:00:10",
+    "PersistentDeliveryMode": true,
+    "AutoCloseConnection": true,
+    "AutomaticRecovery": true,
+    "TopologyRecovery": true,
+    "Exchange": {
+      "Durable": true,
+      "AutoDelete": true,
+      "Type": "Topic"
+    },
+    "Queue": {
+      "AutoDelete": true,
+      "Durable": true,
+      "Exclusive": true
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionString": "127.0.0.1",
+  "AzureServiceBusEnabled": false,
+  "EventBusConnection": "localhost:15672",
+  "EventBusUserName": "rabbit_1",
+  "EventBusPassword": "run_for_your_life",
+
+  "RabbitMqSettings": {
+    "HostName": "localhost",
+    "Port": "5672",
+    "UserName": "guest",
+    "Password": "guest",
+    "ClientProvidedName": "dotNet5Starter",
+    "VirtualHost": "/",
+    "ExchangeName": "dotNet5Starter_event_Exchange"
+  }
 }
