--- a/dotNet5Starter.WebApp/dotNet5Starter.WebApp/dotNet5Starter.Webapp.csproj
+++ b/dotNet5Starter.WebApp/dotNet5Starter.WebApp/dotNet5Starter.Webapp.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+    <PackageReference Include="RabbitMQ.Client.Core.DependencyInjection" Version="4.3.0" />
+    <PackageReference Include="RawRabbit.DependencyInjection.ServiceCollection" Version="2.0.0-rc5" />
+    <PackageReference Include="RawRabbit.Extensions" Version="1.10.4" />
+    <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc5" />
+    <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc5" />
+    <PackageReference Include="RawRabbit.Operations.Tools" Version="2.0.0-rc5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\dotNet5Starter.Services\dotNet5Starter.Services.csproj" />
   </ItemGroup>
 
